--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Meadowlark Travel</title>
+  {{#if showTests}}
+    <link rel="stylesheet" type="text/css" href="/vendor/mocha.css">
+  {{/if}}
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
   {{{body}}}
+
+  {{#if showTests}}
+    <div id="mocha"></div>
+    <script src="/vendor/mocha.js"></script>
+    <script src="/vendor/chai.js"></script>
+    <script>
+      mocha.ui('tdd');
+      var assert = chai.assert;
+    </script>
+    <script src="/qa/tests-global.js"></script>
+    {{#if pageTestScript}}
+      <script src="{{pageTestScript}}"></script>
+    {{/if}}
+    <script>
+      mocha.run();
+    </script>
+  {{/if}}
 </body>
 </html>
