--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,18 @@
   {{#if showTests}}
     <link rel="stylesheet" type="text/css" href="/vendor/mocha.css">
   {{/if}}
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-  {{{body}}}
+  {{> header}}
+
+  <div class="container">
+    {{{body}}}
+  </div>
   
   {{{_sections.jquery}}}
   
