--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,12 @@
   {{> header}}
 
   <div class="container">
+    {{#if flash}}
+      <div class="alert alert-{{flash.type}}" role="alert">
+        <strong>{{flash.intro}}</strong> {{{flash.message}}}
+      </div>
+    {{/if}}
+
     {{{body}}}
   </div>
   
