--- a/views/newsletter.handlebars
+++ b/views/newsletter.handlebars
@@ -1,22 +1,20 @@
 <div class="formContainer">
-  <h2>Sign up fo our newsletter to receive news and specials</h2>
   <form class="form-horizontal newsletterForm" role="form" 
-    action="process?form=newsletter" method="POST">
-    <input type="hidden" name="_csrf" value="{{csrf}}">
+          action="/newsletter" method="POST">
     <div class="form-group">
-      <label for="fieldName" class="col-md-2 control-label">Name</label>
-      <div class="col-md-4">
-        <input type="text" class="form-control" id="fieldName" name="name">
+      <label for="fieldName" class="col-sm-2 control-label">Name</label>
+      <div class="col-sm-4">
+        <input type="text" class="form-control" 
+          id="fieldName" name="name">
       </div>
     </div>
-
     <div class="form-group">
-      <label for="fieldEmail" class="col-md-2 control-label">Email</label>
-      <div class="col-md-4">
-        <input type="text" class="form-control" id="fieldEmail" required name="email">
+      <label for="fieldEmail" class="col-sm-2 control-label">Email</label>
+      <div class="col-sm-4">
+        <input type="email" class="form-control" required 
+              id="fieldName" name="email">
       </div>
     </div>
-
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-4">
         <button type="submit" class="btn btn-default">Register</button>
@@ -24,32 +22,3 @@
     </div>
   </form>
 </div>
-
-{{#section 'jquery'}}
-  <script>
-    $(function () {
-      $('.newsletterForm').on('submit', function (event) {
-        event.preventDefault();
-        var action = $(this).attr('action');
-        var $container = $(this).closest('.formContainer');
-
-        $.ajax({
-          url: action,
-          type: 'POST',
-          data: $(this).serialize(),
-          success: function (data) {
-            if (data.success) {
-              $container.html('<h2>Thank you!</h2>');
-            }
-            else {
-              $container.html('There was a problem.');
-            }
-          },
-          error: function () {
-            $container.html('There was a problem.');
-          }
-        });
-      })
-    });
-  </script>
-{{/section}}
