Added vacation model

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -14,9 +14,9 @@
     </tr>
   </thead>
   <tbody>
-    {{#each cart}}
+    {{#each cart.items}}
       <tr>
-        <td>{{product.name}}</td>
+        <td>{{vacation.name}}</td>
         <td>{{guests}}</td>
       </tr>
     {{/each}}
