--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,12 @@
 body {
   padding-top: 70px;
 }
+
+a.currency {
+  text-decoration: none;
+}
+
+.currency.selected {
+  font-weight: bold;
+  font-size: 150%;
+}
